@@ -1,3 +1,7 @@
+from django.core.exceptions import ValidationError
+from django.utils.functional import cached_property
+from django.utils.translation import ugettext_lazy as _
+
 from wagtail.core import blocks
 from wagtail.embeds.format import embed_to_frontend_html
 
@@ -13,8 +17,12 @@ class EmbedValue:
     def __init__(self, url):
         self.url = url
 
-    def __str__(self):
+    @cached_property
+    def html(self):
         return embed_to_frontend_html(self.url)
+
+    def __str__(self):
+        return self.html
 
 
 class EmbedBlock(blocks.URLBlock):
@@ -56,6 +64,11 @@ class EmbedBlock(blocks.URLBlock):
             return None
         else:
             return EmbedValue(value)
+
+    def clean(self, value):
+        if isinstance(value, EmbedValue) and not value.html:
+            raise ValidationError(_("Cannot find an embed for this URL."))
+        return super().clean(value)
 
     class Meta:
         icon = "media"
